Fix label alignment

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/ui.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/ui.css
@@ -2734,6 +2734,7 @@ select.mceNativeListBox {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 .mceFormControl {
